[package]
name = "asimov"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dirs = "6.0.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.4", features = ["json"] }
schemars = "0.8.22"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.44.2", features = ["full"] }
